--- a/package.json
+++ b/package.json
@@ -51,7 +51,6 @@
     "slick-carousel": "^1.8.1",
     "swiper": "^5.4.1",
     "tslib": "^1.10.0",
-    "typescript": "~3.7.5",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
@@ -70,7 +69,8 @@
     "karma-jasmine-html-reporter": "^1.4.2",
     "protractor": "~5.4.3",
     "ts-node": "~8.3.0",
-    "tslint": "~5.18.0"
+    "tslint": "~5.18.0",
+    "typescript": "^3.7.7"
   },
   "engines": {
     "node": "12.18.3",
