--- a/package.json
+++ b/package.json
@@ -12,19 +12,19 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~9.0.5",
-    "@angular/cdk": "^9.2.3",
+    "@angular/animations": "~12.0.0-next.5",
+    "@angular/cdk": "^11.2.5",
     "@angular/cli": "^11.2.5",
-    "@angular/common": "~9.0.5",
-    "@angular/compiler": "~9.0.5",
-    "@angular/compiler-cli": "^9.0.7",
-    "@angular/core": "~9.0.5",
+    "@angular/common": "~12.0.0-next.5",
+    "@angular/compiler": "~12.0.0-next.5",
+    "@angular/compiler-cli": "^12.0.0-next.5",
+    "@angular/core": "~12.0.0-next.5",
     "@angular/flex-layout": "^9.0.0-beta.31",
-    "@angular/forms": "~9.0.5",
+    "@angular/forms": "~12.0.0-next.5",
     "@angular/material": "^9.2.3",
-    "@angular/platform-browser": "~9.0.5",
-    "@angular/platform-browser-dynamic": "~9.0.5",
-    "@angular/router": "~9.0.5",
+    "@angular/platform-browser": "~12.0.0-next.5",
+    "@angular/platform-browser-dynamic": "~12.0.0-next.5",
+    "@angular/router": "~12.0.0-next.5",
     "@fortawesome/angular-fontawesome": "^0.6.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
@@ -51,11 +51,11 @@
     "slick-carousel": "^1.8.1",
     "swiper": "^5.4.1",
     "tslib": "^1.10.0",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.900.5",
-    "@angular/language-service": "~9.0.5",
+    "@angular/language-service": "~12.0.0-next.5",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
@@ -70,7 +70,7 @@
     "protractor": "~5.4.3",
     "ts-node": "~8.3.0",
     "tslint": "~5.18.0",
-    "typescript": "^3.7.5"
+    "typescript": "^4.2.3"
   },
   "engines": {
     "node": "12.18.3",
